Ticket #28920: Clarified usage of the arguments option.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -1138,8 +1138,8 @@ com.top_logic.model.search.providers.ScriptConsoleHandler.Config.with-commit = M
 com.top_logic.model.search.providers.ScriptConsoleHandler.Config.with-commit.tooltip = Ob das Skript in einem <i>Transaktionskontext</i> ausgeführt wird.
 com.top_logic.model.search.providers.ScriptConsoleHandler.tooltip = <i>Befehl</i> für die TL-Script-Konsole, der einen eingegebenen Skript-Ausdruck ausführt. <p> Wenn der Handler mit <i>With commit</i> konfiguriert ist, kann der Skriptausdruck persistente Daten ändern, z. B. <i>Objekte</i> erstellen oder löschen. </p>
 com.top_logic.model.search.providers.ScriptExecution = Skript Ausführung
-com.top_logic.model.search.providers.ScriptExecution.Config.arguments = Argumente
-com.top_logic.model.search.providers.ScriptExecution.Config.arguments.tooltip = Zusätzliche Argumente für die <i>Operation</i>.
+com.top_logic.model.search.providers.ScriptExecution.Config.arguments = Zusätzliche Argumente
+com.top_logic.model.search.providers.ScriptExecution.Config.arguments.tooltip = Zusätzliche Argumente für die <i>Operation</i>. <p> Hinweis: Das Zielmodell des Befehls wird immer automatisch als erstes Argument übergeben. </p>
 com.top_logic.model.search.providers.ScriptExecution.Config.operation = Operation
 com.top_logic.model.search.providers.ScriptExecution.Config.operation.tooltip = Die auszuführende Operation. <p> Es wird erwartet, dass der Ausdruck eine Funktion ist, die die Eingabe als erstes Argument annimmt. Wenn zusätzliche <i>Argumente</i> konfiguriert sind, sind dies zusätzliche Eingaben für die Operation. Die Funktion kann ein beliebiges Ergebnis zurückgeben. Das erzeugte Ergebnis wird an mögliche konfigurierte Folgeaktionen weitergegeben. </p>
 com.top_logic.model.search.providers.ScriptExecution.tooltip = Führt einen Skriptblock optional in einem Transaktionskontext aus.
