--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -1138,10 +1138,10 @@ com.top_logic.model.search.providers.ScriptConsoleHandler.Config.with-commit = W
 com.top_logic.model.search.providers.ScriptConsoleHandler.Config.with-commit.tooltip = Whether the script is executed in a <i>transaction</i> context.
 com.top_logic.model.search.providers.ScriptConsoleHandler.tooltip = <i>Command</i> for the TL-Script console, that executes an entered script expression. <p> If the handler is configured with <i>With commit</i> the script expression may modify persistent data, such as create or delete <i>objects</i>. </p>
 com.top_logic.model.search.providers.ScriptExecution = Script execution
-com.top_logic.model.search.providers.ScriptExecution.Config.arguments = Arguments
-com.top_logic.model.search.providers.ScriptExecution.Config.arguments.tooltip = Additional arguments to the <i>Operation</i>.
+com.top_logic.model.search.providers.ScriptExecution.Config.arguments = Additional arguments
+com.top_logic.model.search.providers.ScriptExecution.Config.arguments.tooltip = Additional arguments to the <i>Operation</i>. <p> Note: The commands target model is always passed automatically as first argument. </p>
 com.top_logic.model.search.providers.ScriptExecution.Config.operation = Operation
-com.top_logic.model.search.providers.ScriptExecution.Config.operation.tooltip = The operation to perform. <p> The expression is expected to be a function taking the input as first argument. If additional <i>Arguments</i> are configured, these are additional inputs to the operation. The function may return an arbitrary result. The result produced is passed to potential follow-up actions configured. </p>
+com.top_logic.model.search.providers.ScriptExecution.Config.operation.tooltip = The operation to perform. <p> The expression is expected to be a function taking the input as first argument. If additional <i>additional arguments</i> are configured, these are additional inputs to the operation. The function may return an arbitrary result. The result produced is passed to potential follow-up actions configured. </p>
 com.top_logic.model.search.providers.ScriptExecution.tooltip = Execute a script block optionally in a transaction context.
 com.top_logic.model.search.providers.ScriptTask = Script task
 com.top_logic.model.search.providers.ScriptTask.Config.script = Script
