--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -544,10 +544,12 @@ com.top_logic.element.layout.grid.GridComponent.Config.showTechnicalColumn = Tec
 com.top_logic.element.layout.grid.GridComponent.Config.showTechnicalColumn.tooltip = Kennzeichen, das angibt, ob die technische Spalte angezeigt werden soll oder nicht
 com.top_logic.element.layout.grid.GridComponent.Config.structureName = Name der Struktur
 com.top_logic.element.layout.grid.GridComponent.tooltip = Grid-Komponente, die die Bearbeitung einer einzelnen Zeile einer Tabelle ermöglicht.
-com.top_logic.element.layout.grid.GridContextMenuFactory = Gitter-Kontextmenü Fabrik
-com.top_logic.element.layout.grid.GridContextMenuFactory.tooltip = <i>Wählbare Kontextmenüfabrik</i>, die Gitterzeilen auf Business-Objekte abbildet.
+com.top_logic.element.layout.grid.GridContextMenuFactory = Befehle im Kontextmenü des Gitters
+com.top_logic.element.layout.grid.GridContextMenuFactory.Config.command-ids = Befehl-IDs
+com.top_logic.element.layout.grid.GridContextMenuFactory.Config.command-ids.tooltip = IDs von Befehlen, die im Kontextmenü der Baumtabelle angezeigt werden sollen. <p> Die Befehle müssen in der Anwendungskonfiguration in der <i>Command Handler Factory</i> des Dienstes registriert werden. </p>
+com.top_logic.element.layout.grid.GridContextMenuFactory.tooltip = <i>Befehle zur Auswahl</i>, die Gitterzeilen auf Geschäftsobjekte abbilden.
 com.top_logic.element.layout.grid.GridContextMenuProvider = Anbieter von Grid-Kontextmenüs
-com.top_logic.element.layout.grid.GridContextMenuProvider.tooltip = <i>Wählbarer Kontextmenü-Anbieter</i> mit Hilfe der <i>Gitter-Kontextmenü-Fabrik</i> zur Erstellung des Kontextmenüs.
+com.top_logic.element.layout.grid.GridContextMenuProvider.tooltip = <i>Kontextmenü der auswählbaren Komponente</i> unter Verwendung von <i>Raster-Kontextmenübefehlen</i> zur Erstellung des Kontextmenüs.
 com.top_logic.element.layout.grid.GridCreateHandler = Grid-Handler erstellen
 com.top_logic.element.layout.grid.GridCreateHandler.Config.create-handler = Handler erstellen
 com.top_logic.element.layout.grid.GridCreateHandler.Config.create-handler-id = Handler-ID erstellen
