--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -544,10 +544,12 @@ com.top_logic.element.layout.grid.GridComponent.Config.showTechnicalColumn = Sho
 com.top_logic.element.layout.grid.GridComponent.Config.showTechnicalColumn.tooltip = Flag indicating whether to show technical column or not
 com.top_logic.element.layout.grid.GridComponent.Config.structureName = Structure name
 com.top_logic.element.layout.grid.GridComponent.tooltip = Grid component that allows editing of a single row of a table.
-com.top_logic.element.layout.grid.GridContextMenuFactory = Grid context menu factory
-com.top_logic.element.layout.grid.GridContextMenuFactory.tooltip = <i>Selectable context menu factory</i> that maps grid rows to business objects.
+com.top_logic.element.layout.grid.GridContextMenuFactory = Grid context menu commands
+com.top_logic.element.layout.grid.GridContextMenuFactory.Config.command-ids = Command ids
+com.top_logic.element.layout.grid.GridContextMenuFactory.Config.command-ids.tooltip = IDs of commands that should be displayed in the context menu of the tree table. <p> The commands must be registered in the application configuration at the service <i>command handler factory</i>. </p>
+com.top_logic.element.layout.grid.GridContextMenuFactory.tooltip = <i>Commands on selection</i> that maps grid rows to business objects.
 com.top_logic.element.layout.grid.GridContextMenuProvider = Grid context menu provider
-com.top_logic.element.layout.grid.GridContextMenuProvider.tooltip = <i>Selectable context menu provider</i> using <i>grid context menu factory</i> to create the context menu.
+com.top_logic.element.layout.grid.GridContextMenuProvider.tooltip = <i>Context menu of selectable component</i> using <i>grid context menu commands</i> to create the context menu.
 com.top_logic.element.layout.grid.GridCreateHandler = Grid create handler
 com.top_logic.element.layout.grid.GridCreateHandler.Config.create-handler = Create handler
 com.top_logic.element.layout.grid.GridCreateHandler.Config.create-handler-id = Create handler ID
