Ticket #28951: Enhanced label for MetaLabelProvider.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -3300,7 +3300,7 @@ com.top_logic.layout.form.component.SelectorComponent.UIOptions.defaultSelection
 com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionBuilder = Optionen
 com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionBuilder.tooltip = <i>List Model Builder</i>, der die Optionen erstellt, aus denen ausgewählt werden kann. <p> Die ausgewählte Option wird sofort auf dem Auswahlkanal dieser Komponente veröffentlicht. </p>
 com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionLabelProvider = Optionsbeschriftung
-com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionLabelProvider.tooltip = <i>Berechnung der Bezeichnung</i> für die Anzeige der Optionen. <p> Wenn keine angegeben wird, wird <i>die Anwendungskonfiguration</i> verwendet. </p>
+com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionLabelProvider.tooltip = <i>Berechnung der Bezeichnung</i> für die Anzeige der Optionen. <p> Wenn keine angegeben wird, wird <i>die Standardbezeichnung</i> verwendet. </p>
 com.top_logic.layout.form.component.SelectorComponent.tooltip = <i>Komponente</i>, die ein einzelnes Auswahlfeld mit Optionen anzeigt, die von einem <i>List Model Builder</i> erzeugt wurden.
 com.top_logic.layout.form.component.SimpleFormComponent = Einfache Formular-Komponente
 com.top_logic.layout.form.component.SimpleFormComponent.tooltip = Die <i>einfache Formular-Komponente</i> kann mit einfachen JSP- und HTML-Seiten verwendet werden.
@@ -4135,8 +4135,8 @@ com.top_logic.layout.provider.LabelResourceProvider = Anbieter von Label-Ressour
 com.top_logic.layout.provider.LabelResourceProvider.Config.label-provider = Label-Generator
 com.top_logic.layout.provider.LabelResourceProvider.Config.label-provider.tooltip = Der <i>Etikettenlieferant</i> zum Verpacken.
 com.top_logic.layout.provider.LabelResourceProvider.tooltip = Dynamische Erweiterung eines <i>Label-Providers</i> zu einem <i>Ressourcen-Provider</i>, um einen <i>Label-Provider</i> in einem Kontext zu verwenden, in dem ein <i>Ressourcen-Provider</i> erforderlich ist.
-com.top_logic.layout.provider.MetaLabelProvider = Nachschlagen der Anwendungskonfiguration
-com.top_logic.layout.provider.MetaLabelProvider.tooltip = Berechnet Bezeichnungen für Objekte anhand von Implementierungen, die in der Anwendungskonfiguration für Objekttypen registriert sind. <p> Verwendet den <i>Dienst für die Berechnung von Bezeichnungen</i>, um die Implementierung des <i>Bezeichnungsanbieters</i> zu finden. Als Schlüssel zum Register verwendet es entweder den dynamischen Typ oder die Java-Klasse des Objekts, um eine geeignete Implementierung zu finden. </p>
+com.top_logic.layout.provider.MetaLabelProvider = Standard Bezeichnung
+com.top_logic.layout.provider.MetaLabelProvider.tooltip = Erzeugt Bezeichnungen für Objekte, die in der Anwendungskonfiguration registrierte Implementierungen verwenden. <p> Implementierungen können im <i>Dienst der Berechnung von Bezeichnungen</i> registriert werden. Als Schlüssel zur Registrierung wird entweder der dynamische Typ oder die Java-Klasse des Objekts verwendet. </p>
 com.top_logic.layout.provider.label.FileSizeLabelProvider = Anbieter von Dateigrößenetiketten
 com.top_logic.layout.provider.label.FileSizeLabelProvider.Config.max-fraction-digits = Maximale Nachkommastellen
 com.top_logic.layout.provider.label.FileSizeLabelProvider.Config.max-fraction-digits.tooltip = Maximale Anzahl der angezeigten Nachkommastellen.
@@ -5968,7 +5968,7 @@ com.top_logic.layout.table.model.ColumnBaseConfig.fieldProvider.tooltip = <i>Fel
 com.top_logic.layout.table.model.ColumnBaseConfig.filterProvider = Anbieter von Filtern
 com.top_logic.layout.table.model.ColumnBaseConfig.filterProvider.tooltip = <i>Tabellenfilter-Anbieter</i>, um <i>einen Tabellenfilter</i> für diese Spalte bereitzustellen, oder <code>null</code>, wenn keiner konfiguriert ist.
 com.top_logic.layout.table.model.ColumnBaseConfig.fullTextProvider = Volltext-Anbieter
-com.top_logic.layout.table.model.ColumnBaseConfig.fullTextProvider.tooltip = <i>Berechnung der Bezeichnung</i>, die den Spaltenwert für die Volltextsuche liefert. <p> Wenn nicht konfiguriert, wird standardmäßig entweder der <i>Anbieter von Bezeichnungen</i> oder der <i>Anbieter von Ressourcen</i> verwendet, wenn eine dieser Eigenschaften festgelegt ist. </p> <p> Wenn weder der <i>Label-Provider</i> noch der <i>Resource-Provider</i> eingestellt ist, die Spalte aber einen <i>Accessor</i> hat, ist der Standard für den Volltext-Provider die <i>Suche in der Anwendungskonfiguration</i>. </p>
+com.top_logic.layout.table.model.ColumnBaseConfig.fullTextProvider.tooltip = <i>Berechnung der Bezeichnung</i>, die den Spaltenwert für die Volltextsuche liefert. <p> Wenn nicht konfiguriert, wird standardmäßig entweder der <i>Label-Anbieter</i> oder der <i>Ressourcen-Anbieter</i> verwendet, wenn eine dieser Eigenschaften festgelegt ist. </p> <p> Wenn weder der <i>Label-Provider</i> noch der <i>Resource-Provider</i> festgelegt ist, die Spalte aber einen <i>Accessor</i> hat, wird als Standard für den Volltext-Provider die <i>Standardbezeichnung</i> verwendet. </p>
 com.top_logic.layout.table.model.ColumnBaseConfig.headControlProvider = Anbieter der Kopfsteuerung
 com.top_logic.layout.table.model.ColumnBaseConfig.headControlProvider.tooltip = Der <i>Steuerelementanbieter</i>, der das Steuerelement erzeugt, das den Kopf der Spalte darstellt, oder <code>null</code>, wenn kein Steuerelement konfiguriert ist.
 com.top_logic.layout.table.model.ColumnBaseConfig.headStyle = Kopf-Stil
