--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -3300,7 +3300,7 @@ com.top_logic.layout.form.component.SelectorComponent.UIOptions.defaultSelection
 com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionBuilder = Option builder
 com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionBuilder.tooltip = <i>List model builder</i> creating the options to select from. <p> The selected option is immediately published on the selection channel of this component. </p>
 com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionLabelProvider = Option label provider
-com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionLabelProvider.tooltip = <i>Label provider</i> for displaying the options. <p> If none is given, <i>application configuration lookup</i> is used. </p>
+com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionLabelProvider.tooltip = <i>Label provider</i> for displaying the options. <p> If none is given, <i>default label</i> is used. </p>
 com.top_logic.layout.form.component.SelectorComponent.tooltip = <i>Component</i> displaying a single select field showing options produced by a <i>list model builder</i>.
 com.top_logic.layout.form.component.SimpleFormComponent = Simple form component
 com.top_logic.layout.form.component.SimpleFormComponent.tooltip = The <i>simple form component</i> can be used with simple JSP and HTML pages.
@@ -4135,8 +4135,8 @@ com.top_logic.layout.provider.LabelResourceProvider = Label resource provider
 com.top_logic.layout.provider.LabelResourceProvider.Config.label-provider = Label provider
 com.top_logic.layout.provider.LabelResourceProvider.Config.label-provider.tooltip = The <i>label provider</i> to wrap.
 com.top_logic.layout.provider.LabelResourceProvider.tooltip = Dynamic extension of a <i>label provider</i> to a <i>resource provider</i> to use a <i>label provider</i> in a context where a <i>resource provider</i> is required.
-com.top_logic.layout.provider.MetaLabelProvider = Application configuration lookup
-com.top_logic.layout.provider.MetaLabelProvider.tooltip = Computes labels for objects using implementations registered in the application configuration for object types. <p> Uses <i>label provider service</i> for looking up its <i>label provider</i> implementation. As key to the registry, it either uses the dynamic type or the Java class of the object to find an appropriate implementation. </p>
+com.top_logic.layout.provider.MetaLabelProvider = Default label
+com.top_logic.layout.provider.MetaLabelProvider.tooltip = Generates labels for objects using implementations registered in the application configuration. <p> Implementations can be registered in the <i>label provider service</i>. As key to the registry, either the dynamic type or the Java class of the object is used.. </p>
 com.top_logic.layout.provider.label.FileSizeLabelProvider = File size label provider
 com.top_logic.layout.provider.label.FileSizeLabelProvider.Config.max-fraction-digits = Maximum fraction digits
 com.top_logic.layout.provider.label.FileSizeLabelProvider.Config.max-fraction-digits.tooltip = Maximum amount of displayed fraction digits.
@@ -5968,7 +5968,7 @@ com.top_logic.layout.table.model.ColumnBaseConfig.fieldProvider.tooltip = <i>Fie
 com.top_logic.layout.table.model.ColumnBaseConfig.filterProvider = Filter provider
 com.top_logic.layout.table.model.ColumnBaseConfig.filterProvider.tooltip = <i>Table filter provider</i> to provide <i>table filter</i> for this column, or <code>null</code> if none configured.
 com.top_logic.layout.table.model.ColumnBaseConfig.fullTextProvider = Full text provider
-com.top_logic.layout.table.model.ColumnBaseConfig.fullTextProvider.tooltip = <i>Label provider</i> to provide the column value for full-text search. <p> If not configured, it defaults to either <i>Label provider</i>, or <i>Resource provider</i>, if one of those properties are set. </p> <p> If neither <i>Label provider</i> nor <i>Resource provider</i> is set, but the column has an <i>Accessor</i>, the default for the full-text provider is <i>application configuration lookup</i>. </p>
+com.top_logic.layout.table.model.ColumnBaseConfig.fullTextProvider.tooltip = <i>Label provider</i> to provide the column value for full-text search. <p> If not configured, it defaults to either <i>Label provider</i>, or <i>Resource provider</i>, if one of those properties are set. </p> <p> If neither <i>Label provider</i> nor <i>Resource provider</i> is set, but the column has an <i>Accessor</i>, the default for the full-text provider is <i>default label</i>. </p>
 com.top_logic.layout.table.model.ColumnBaseConfig.headControlProvider = Head control provider
 com.top_logic.layout.table.model.ColumnBaseConfig.headControlProvider.tooltip = The <i>control provider</i> to produce the control rendering the head of the column, or <code>null</code> when none configured.
 com.top_logic.layout.table.model.ColumnBaseConfig.headStyle = Head style
