--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -58,6 +58,7 @@ class.com.top_logic.element.meta.kbbased.I18NConstants.START_UP_WRAPPER_RESOLVER
 class.com.top_logic.element.meta.kbbased.storage.I18NConstants.ERROR_CANNOT_ACCESS_ATTRIBUTE__OBJ_ATTR_ERR = Der Zugriff auf das Attribut "{1}" von "{0}" ist fehlgeschlagen: {2}
 class.com.top_logic.element.meta.kbbased.storage.I18NConstants.ERROR_EMPTY_VALUE_IN_MANDATORY_ATTRIBUTE = Der Wert darf nicht leer sein.
 class.com.top_logic.element.meta.kbbased.storage.I18NConstants.ERROR_VALUE_IS_NOT_TLANNOTATION__VALUE = Der angegebene Wert {0} ist keine TLAnnotation.
+class.com.top_logic.element.meta.kbbased.storage.I18NConstants.NOT_APPLICATION_VALUE_TYPE___EXPECTED_ACTUAL = Der Wert muss einen der Typen {0} haben, ist aber vom Typ {1}.
 class.com.top_logic.element.model.I18NConstants.ERROR_UNDEFINED_ATTRIBUTE_TYPE__TYPE_ATTR_LOCATION = Undefinierter Typ ''{0}'' im Modul im Attribut ''{1}'' bei ''{2}''.
 class.com.top_logic.element.model.I18NConstants.MODEL_SERVIVE_STARTUP = Modelldienst gestartet.
 class.com.top_logic.element.model.export.ui.I18NConstants.NEW_MODULE_CONFIGURATION = Neue Modulkonfigurationsdatei erstellt und in die Anwendungskonfiguration eingetragen. Die Konfiguration muss neu geladen werden und alle Sitzungen müssen beendet werden.
