--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -58,6 +58,7 @@ class.com.top_logic.element.meta.kbbased.I18NConstants.START_UP_WRAPPER_RESOLVER
 class.com.top_logic.element.meta.kbbased.storage.I18NConstants.ERROR_CANNOT_ACCESS_ATTRIBUTE__OBJ_ATTR_ERR = Failed to access attribute "{1}" of "{0}": {2}
 class.com.top_logic.element.meta.kbbased.storage.I18NConstants.ERROR_EMPTY_VALUE_IN_MANDATORY_ATTRIBUTE = The value must not be empty.
 class.com.top_logic.element.meta.kbbased.storage.I18NConstants.ERROR_VALUE_IS_NOT_TLANNOTATION__VALUE = The given value {0} is not a TLAnnotation.
+class.com.top_logic.element.meta.kbbased.storage.I18NConstants.NOT_APPLICATION_VALUE_TYPE___EXPECTED_ACTUAL = The value has to have one of the types {0}, but is of type {1}.
 class.com.top_logic.element.model.I18NConstants.ERROR_UNDEFINED_ATTRIBUTE_TYPE__TYPE_ATTR_LOCATION = Undefined type ''{0}'' in module in attribute ''{1}'' at ''{2}''.
 class.com.top_logic.element.model.I18NConstants.MODEL_SERVIVE_STARTUP = Model service started.
 class.com.top_logic.element.model.export.ui.I18NConstants.NEW_MODULE_CONFIGURATION = New module configuration file created and entered into the application configuration. The configuration must be reloaded and all sessions must be terminated.
