Ticket #28970: Added support for HTMLFragment as value for StructuredText attributes.

--- a/com.top_logic.model.wysiwyg/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.wysiwyg/src/main/java/META-INF/messages_de.properties
@@ -1,3 +1,4 @@
+class.com.top_logic.model.wysiwyg.storage.I18NConstants.ERROR_CREATING_STRUCTURED_TEXT__INPUT = Fehler bei der Umwandlung von ''{0}'' in strukturierten Text.
 com.top_logic.model.wysiwyg.annotation.StructuredTextEditorConfig = Strukturierte Texteditor-Konfiguration
 com.top_logic.model.wysiwyg.annotation.StructuredTextEditorConfig.features = Merkmale
 com.top_logic.model.wysiwyg.annotation.StructuredTextEditorConfig.features.tooltip = Liste der Funktionen zur Auswahl.
