--- a/com.top_logic.model.wysiwyg/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.wysiwyg/src/main/java/META-INF/messages_en.properties
@@ -1,3 +1,4 @@
+class.com.top_logic.model.wysiwyg.storage.I18NConstants.ERROR_CREATING_STRUCTURED_TEXT__INPUT = Error transforming ''{0}'' to structured text.
 com.top_logic.model.wysiwyg.annotation.StructuredTextEditorConfig = Structured text editor configuration
 com.top_logic.model.wysiwyg.annotation.StructuredTextEditorConfig.features = Features
 com.top_logic.model.wysiwyg.annotation.StructuredTextEditorConfig.features.tooltip = List of features to select.
